--- a/src/fam/mockup-01/package.json
+++ b/src/fam/mockup-01/package.json
@@ -2,6 +2,8 @@
   "name": "interactive-mockup-01",
   "version": "0.1.0",
   "private": true,
+  "description": "Finding Aids Manager interactive mockup #1",
+  "author": "David <da70@nyu.edu>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -29,5 +31,9 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": ">= 12.0.0",
+    "npm": ">= 6.0.0"
   }
 }
